--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#ED4C54</color>
+    <color name="colorPrimary">#77560C</color>
     <color name="colorPrimaryDark">#C48A15</color>
-    <color name="colorAccent">#E9EBEE</color>
+    <color name="colorAccent">#F44336</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
