--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/header"
     android:layout_height="170dp"
-    android:padding="25dp"
+    android:padding="20dp"
     android:theme="@style/ThemeOverlay.AppCompat.Light">
 
 
@@ -14,6 +14,7 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:src="@drawable/profile"
+        android:layout_marginTop="10dp"
         app:civ_border_color="#FF000000"
         app:civ_border_width="2dp" />
 
@@ -24,6 +25,8 @@
         android:layout_below="@+id/nav_header_user_image_CIV"
         android:layout_marginTop="10dp"
         android:text="@string/gretel_hilbing"
+        android:textColor="@color/white"
+        android:textStyle="bold"
         android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
 
