Working on Update and Delete Instruments

--- a/app/src/main/res/layout/all_instruments_per_user.xml
+++ b/app/src/main/res/layout/all_instruments_per_user.xml
@@ -1,12 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:elevation="4dp"
+    android:layout_margin="4dp">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/instrument_item_TV"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
+        android:layout_weight="1"
         android:layout_height="wrap_content"
         android:text="TextView"
+        android:padding="3dp"
+        android:background="@color/white"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
-</LinearLayout>
+
+    <TextView
+        android:id="@+id/instrument_userIdTV"
+        android:text="User Id"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
+
+    <TextView
+        android:id="@+id/instrument_userNameTV"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:text="User Name"
+        android:visibility="gone"
+        android:layout_height="wrap_content"/>
+
+    </LinearLayout>
+</androidx.cardview.widget.CardView>
