--- a/app/src/main/res/layout/activity_set_up.xml
+++ b/app/src/main/res/layout/activity_set_up.xml
@@ -21,22 +21,60 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
+        android:layout_marginEnd="8dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/setup_user_image_CIV">
+
+        <CheckBox
+            android:id="@+id/settings_available_CB"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/available"
+            android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/settings_singer_CB"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/singer"
+            android:textStyle="bold" />
+
+        <CheckBox
+            android:id="@+id/settings_composer_CB"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/composer"
+            android:textStyle="bold" />
+
+    </LinearLayout>
+
     <EditText
         android:id="@+id/setup_user_full_name_ET"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="116dp"
         android:layout_marginEnd="8dp"
+        android:background="@drawable/inputs"
+        android:drawableLeft="@drawable/ic_user"
         android:ems="10"
         android:gravity="start|top"
-        android:inputType="textMultiLine"
-        android:background="@drawable/inputs"
-        android:padding="10dp"
         android:hint="@string/enter_your_name"
+        android:inputType="textMultiLine"
+        android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        android:drawableLeft="@drawable/ic_user"
         app:layout_constraintTop_toBottomOf="@+id/setup_user_image_CIV" />
 
     <EditText
@@ -53,7 +91,7 @@
         android:inputType="phone"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.555"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setup_user_full_name_ET" />
 
@@ -62,7 +100,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="32dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/buttons"
         android:text="@string/save"
@@ -78,7 +116,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="56dp"
+        android:layout_marginTop="84dp"
         android:layout_marginEnd="8dp"
         android:background="@drawable/inputs"
         android:entries="@array/countries_array"
@@ -96,9 +134,9 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         app:layout_constraintBottom_toTopOf="@+id/setup_country_SP"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.054"
+        app:layout_constraintHorizontal_bias="0.06"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/setup_user_phone"
-        app:layout_constraintVertical_bias="0.621" />
+        app:layout_constraintVertical_bias="0.198" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
