Change to searchView in FindMusicianActivity

--- a/app/src/main/res/layout/activity_find_musician.xml
+++ b/app/src/main/res/layout/activity_find_musician.xml
@@ -21,9 +21,9 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="24dp"
         android:layout_marginEnd="8dp"
-        android:textStyle="bold"
         android:text="@string/search_for_musicians_for_your_band"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
@@ -31,47 +31,29 @@
         app:layout_constraintTop_toBottomOf="@+id/find_musician_appbar_layout"
         app:layout_constraintVertical_bias="0.06" />
 
-    <EditText
-        android:id="@+id/search_musician_ET"
-        android:layout_width="275dp"
-        android:layout_height="40dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="8dp"
-        android:background="@drawable/inputs"
-        android:ems="10"
-        android:hint="@string/search"
-        android:inputType="textPersonName"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.066"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/simpleTextTV" />
-
-    <ImageButton
-        android:id="@+id/search_musician_BT"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/search_musician_ET"
-        app:layout_constraintTop_toBottomOf="@+id/simpleTextTV"
-        app:srcCompat="@drawable/ic_search" />
-
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/search_musician_RV"
         android:layout_width="394dp"
         android:layout_height="472dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <SearchView
+        android:id="@+id/find_musician_SV"
+        android:layout_width="351dp"
+        android:layout_height="63dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="2dp"
+        app:layout_constraintBottom_toTopOf="@+id/simpleTextTV"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_musician_ET" />
+        app:layout_constraintTop_toBottomOf="@+id/find_musician_appbar_layout" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
