Working on add musician to a band, MusiciansActivity

--- a/app/src/main/res/menu/drawer_menu.xml
+++ b/app/src/main/res/menu/drawer_menu.xml
@@ -20,6 +20,10 @@
             android:icon="@drawable/ic_band"
             android:title="@string/bands"/>
         <item
+            android:id="@+id/nav_musicians"
+            android:icon="@drawable/ic_band"
+            android:title="@string/musicians"/>
+        <item
             android:id="@+id/nav_song"
             android:icon="@drawable/ic_song"
             android:title="@string/songs"/>
