--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,8 +10,10 @@
     tools:openDrawer="start"
     tools:context=".MainActivity">
 
-    <RelativeLayout
+
+   <LinearLayout
         android:id="@+id/relative_layout"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,7 +22,7 @@
             layout="@layout/app_bar_layout"></include>
 
 
-        <FrameLayout
+        <!--<FrameLayout
             android:id="@+id/main_container_FL"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -30,7 +32,8 @@
                 android:id="@+id/events_RV"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
-        </FrameLayout>
+
+        </FrameLayout>-->
         <ImageButton
             android:id="@+id/main_search_BT"
             android:layout_width="45dp"
@@ -39,7 +42,8 @@
             android:layout_alignParentEnd="true"
             android:src="@drawable/ic_search"/>
 
-    </RelativeLayout>
+
+    </LinearLayout>
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/navigationView_NV"
@@ -49,6 +53,16 @@
             android:layout_marginBottom="3dp"
             android:fitsSystemWindows="true"
             app:menu="@menu/drawer_menu"/>
+
+    <ExpandableListView
+        android:id="@+id/nav_expandableListView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="170dp"
+        android:background="@color/white"
+        android:dividerHeight="0dp"
+        android:groupIndicator="@null"/>
+
 
 
 
