--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="black">#000000</color>
     <color name="recyclerChat">#DEC5A5</color>
     <color name="currentUserIdColor">#986464</color>
+    <color name="dividerColor">#B0B0B0</color>
 
 </resources>
