--- a/app/src/main/res/layout/app_bar_layout.xml
+++ b/app/src/main/res/layout/app_bar_layout.xml
@@ -1,28 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout
+<androidx.appcompat.widget.Toolbar
+    android:id="@+id/main_app_bar"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/relative_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <androidx.appcompat.widget.Toolbar
-        android:id="@+id/main_app_bar"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@color/colorPrimaryDark"/>
+    android:layout_height="wrap_content"
+    android:background="@color/colorPrimaryDark">
 
 
-    <FrameLayout
-        android:id="@+id/main_container_FL"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/main_page_toolbar">
-
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/events_RV"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </FrameLayout>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+</androidx.appcompat.widget.Toolbar>
