--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -32,6 +32,7 @@
                 android:id="@+id/settings_profile_picture_CIV"
                 android:layout_width="80dp"
                 android:layout_height="80dp"
+                app:civ_border_width="2dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/profile" />
 
