--- a/app/src/main/res/layout/activity_add_band.xml
+++ b/app/src/main/res/layout/activity_add_band.xml
@@ -20,7 +20,7 @@
         android:scrollbarStyle="insideInset"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/settings_toolbar">
+        app:layout_constraintTop_toBottomOf="@+id/add_band_toolbar">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -44,10 +44,7 @@
                 android:src="@drawable/band_placeholder"
                 app:civ_border_color="#FF000000"
                 app:civ_border_width="2dp"
-                android:layout_gravity="center_horizontal"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/settings_toolbar" />
+                android:layout_gravity="center_horizontal" />
 
 
             <EditText
@@ -63,66 +60,40 @@
                 android:gravity="start|top"
                 android:hint="@string/enter_band_name"
                 android:inputType="textMultiLine"
-                android:padding="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/band_image_CIV" />
+                android:padding="10dp" />
 
             <EditText
                 android:id="@+id/band_story_ET"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/inputs"
                 android:drawableLeft="@drawable/ic_history"
                 android:ems="10"
                 android:hint="@string/enter_band_story"
                 android:inputType="textMultiLine"
-                android:padding="10dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/band_available_CB" />
-
-            <Button
-                android:id="@+id/band_save_BT"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="32dp"
-                android:layout_marginEnd="8dp"
-                android:background="@drawable/buttons"
-                android:text="@string/create_band"
-                android:textColor="@color/white"
-                android:textStyle="bold"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/band_country_SP" />
+                android:padding="10dp" />
 
             <Spinner
                 android:id="@+id/band_country_SP"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="60dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/inputs"
                 android:entries="@array/countries_array"
                 android:padding="0dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/band_story_ET" />
+            />
 
             <TextView
                 android:id="@+id/where_do_you_live_TV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="8dp"
+                android:layout_marginStart="8dp"
                 android:text="@string/where_is_the_band_located"
                 android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                 app:layout_constraintBottom_toTopOf="@+id/band_country_SP"
@@ -134,31 +105,30 @@
                 android:id="@+id/band_available_CB"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_weight="1"
                 android:text="@string/available"
                 android:textStyle="bold"
+                android:layout_gravity="center_horizontal"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/band_name_ET" />
 
             <Button
-                android:id="@+id/band_find_musicians_BT"
+                android:id="@+id/band_save_BT"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginTop="8dp"
                 android:layout_marginEnd="8dp"
                 android:background="@drawable/buttons"
-                android:text="@string/find_musicians"
+                android:text="@string/create_band"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintHorizontal_bias="1.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/band_save_BT"
-                app:layout_constraintVertical_bias="0.0" />
+                app:layout_constraintTop_toBottomOf="@+id/band_country_SP" />
 
         </LinearLayout>
     </ScrollView>
